Detect boolean options without value argument as true
The transformers needed to be rewritten. To detect a value either with
one or no argument, the transfomer needs to decide what the remaining
arguments are, i.e. if an argument gets consumed or not.